--- a/index.html
+++ b/index.html
@@ -1,59 +1,18 @@
 <!DOCTYPE html>
-<html lang="ja">
-
-<head>
-    <meta charset="utf-8" />
-    <title>AR動画サンプル</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        a-scene {
-            height: 100vh;
-        }
-    </style>
-
-    <!-- A-Frameライブラリ -->
-    <script src="./dist/aframe-master.min.js"></script>
-    <!-- AR.jsライブラリ -->
-    <script src="./dist/aframe-ar.js"></script>
-</head>
-
-<body>
-    <!-- a-sceneにarjs属性を追加してARモードに設定 -->
-    <a-scene embedded arjs='sourceType: webcam;'>
-        <a-assets>
-            <video id="myVideo" loop="false" src="./video.webm"> </video>
-        </a-assets>
-        <!-- Hiroマーカーが認識されたときに、内部のオブジェクトを表示 -->
-        <a-marker preset="hiro" id="marker">
-            <!-- マーカー上に表示する動画 -->
-            <a-video src="#myVideo" width="1.28" height="2.160" position="0 0 0" rotation="-90 0 0"></a-video>
-        </a-marker>
-        <!-- カメラの定義 -->
-        <a-entity camera></a-entity>
+<html>
+  <head>
+    <title>AR.js Sample</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+  </head>
+  <body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs>
+      <!-- カメラ -->
+      <a-marker preset="hiro">
+        <!-- 表示する3Dオブジェクト -->
+        <a-box position="0 0.5 0" material="color: red;"></a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
     </a-scene>
-</body>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const marker = document.getElementById("marker");
-        // a-video の内部の HTMLVideoElement を取得
-        const myVdeo= document.getElementById("myVideo");
-
-        marker.addEventListener("markerFound", function () {
-            // HTMLVideoElement を再生
-            myVdeo.play();
-        });
-
-        marker.addEventListener("markerLost", function () {
-            // HTMLVideoElement を一時停止して先頭に戻す
-            myVdeo.pause();
-            myVdeo.currentTime = 0;
-        });
-    });
-</script>
-
+  </body>
 </html>
