--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <img id="my-image" src="your-image.png">
       </a-assets>
 
-      <a-marker type="pattern" url="hiro.patt">
+      <a-marker type="pattern" url="marker.patt">
         <a-image src="#my-image" rotation="-90 0 0" width="1" height="1"></a-image>
       </a-marker>
 
