--- a/index.html
+++ b/index.html
@@ -1,19 +1,145 @@
-<html>
-  <head>
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>AR.js iPhone Style Camera</title>
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  </head>
-  <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs vr-mode-ui="enabled: false">
-      <a-assets>
-        <img id="my-image" src="your-image.png">
-      </a-assets>
 
-      <a-marker type="pattern" url="marker.patt">
-        <a-image src="#my-image" rotation="-90 0 0" width="1" height="1"></a-image>
-      </a-marker>
+    <style>
+        /* 全体のレイアウト */
+        body { margin: 0; overflow: hidden; font-family: sans-serif; }
 
-      <a-entity camera></a-entity>
+        /* iPhone風シャッターボタンの配置 */
+        #shutter-wrapper {
+            position: fixed;
+            bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* シャッターボタンの外枠 */
+        #snap {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            background-color: transparent;
+            border: 5px solid white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            outline: none;
+            padding: 0;
+            transition: transform 0.1s ease-in-out;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        /* シャッターボタンの内側 */
+        .inner-circle {
+            width: 64px;
+            height: 64px;
+            background-color: white;
+            border-radius: 50%;
+            transition: all 0.1s ease-in-out;
+        }
+
+        /* 押した時のアニメーション */
+        #snap:active { transform: scale(0.9); }
+        #snap:active .inner-circle { width: 58px; height: 58px; }
+
+        /* フラッシュ演出用のレイヤー */
+        #flash-layer {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: white;
+            z-index: 2000;
+            opacity: 0;
+            pointer-events: none;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="flash-layer"></div>
+
+    <div id="shutter-wrapper">
+        <button id="snap">
+            <div class="inner-circle"></div>
+        </button>
+    </div>
+
+    <a-scene 
+        embedded 
+        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" 
+        renderer="preserveDrawingBuffer: true; logarithmicDepthBuffer: true;"
+        vr-mode-ui="enabled: false">
+        
+        <a-assets>
+            <img id="my-image" src="your-image.png">
+        </a-assets>
+
+        <a-marker type="pattern" url="marker.patt">
+            <a-image 
+                src="#my-image" 
+                rotation="-90 0 0" 
+                position="0 0.1 0" 
+                width="1" 
+                height="1">
+            </a-image>
+        </a-marker>
+
+        <a-entity camera></a-entity>
     </a-scene>
-  </body>
+
+    <script>
+        const snapButton = document.getElementById('snap');
+        const flashLayer = document.getElementById('flash-layer');
+
+        snapButton.addEventListener('click', () => {
+            // 1. フラッシュ演出
+            flashLayer.style.opacity = '1';
+            setTimeout(() => {
+                flashLayer.style.opacity = '0';
+                flashLayer.style.transition = 'opacity 0.4s';
+            }, 50);
+
+            // 2. 撮影処理
+            const scene = document.querySelector('a-scene');
+            const video = document.querySelector('video');
+            const canvas = scene.canvas;
+
+            // 合成用のCanvas作成
+            const newCanvas = document.createElement('canvas');
+            newCanvas.width = video.videoWidth;
+            newCanvas.height = video.videoHeight;
+            const ctx = newCanvas.getContext('2d');
+
+            // カメラ映像を描画
+            ctx.drawImage(video, 0, 0, newCanvas.width, newCanvas.height);
+            // AR（A-Frame）のCanvasをリサイズして重ねる
+            ctx.drawImage(canvas, 0, 0, newCanvas.width, newCanvas.height);
+
+            // 3. ダウンロード処理
+            try {
+                const dataURL = newCanvas.toDataURL('image/png');
+                const link = document.createElement('a');
+                link.download = `AR_Photo_${Date.now()}.png`;
+                link.href = dataURL;
+                link.click();
+            } catch (err) {
+                console.error("保存に失敗しました:", err);
+                alert("画像の保存に失敗しました。ブラウザの制限を確認してください。");
+            }
+        });
+    </script>
+</body>
 </html>
