--- a/index.html
+++ b/index.html
@@ -3,84 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>AR.js iPhone Style Camera</title>
+    <title>AR Screenshot Mode</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
     <style>
-        /* 全体のレイアウト */
-        body { margin: 0; overflow: hidden; font-family: sans-serif; }
+        body { margin: 0; overflow: hidden; font-family: sans-serif; background-color: #000; }
 
-        /* iPhone風シャッターボタンの配置 */
-        #shutter-wrapper {
+        /* 操作案内のオーバーレイ */
+        #ui-layer {
             position: fixed;
-            bottom: 40px;
-            left: 50%;
-            transform: translateX(-50%);
+            top: 20px;
+            left: 0;
+            width: 100%;
             z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            text-align: center;
+            pointer-events: none; /* 下のAR操作を邪魔しない */
+            transition: opacity 0.3s;
         }
 
-        /* シャッターボタンの外枠 */
-        #snap {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            background-color: transparent;
-            border: 5px solid white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            outline: none;
-            padding: 0;
-            transition: transform 0.1s ease-in-out;
-            -webkit-tap-highlight-color: transparent;
+        .guide-text {
+            display: inline-block;
+            background: rgba(0, 0, 0, 0.6);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 30px;
+            font-size: 14px;
         }
 
-        /* シャッターボタンの内側 */
-        .inner-circle {
-            width: 64px;
-            height: 64px;
-            background-color: white;
-            border-radius: 50%;
-            transition: all 0.1s ease-in-out;
-        }
-
-        /* 押した時のアニメーション */
-        #snap:active { transform: scale(0.9); }
-        #snap:active .inner-circle { width: 58px; height: 58px; }
-
-        /* フラッシュ演出用のレイヤー */
-        #flash-layer {
+        /* 画面全体を隠す透明なボタン（タップ判定用） */
+        #tap-area {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: white;
-            z-index: 2000;
-            opacity: 0;
-            pointer-events: none;
+            z-index: 999;
+            cursor: pointer;
         }
+
+        /* 撮影モード（UI非表示）時のスタイル */
+        .hide { opacity: 0 !important; }
     </style>
 </head>
 
 <body>
-    <div id="flash-layer"></div>
-
-    <div id="shutter-wrapper">
-        <button id="snap">
-            <div class="inner-circle"></div>
-        </button>
+    <div id="ui-layer">
+        <div class="guide-text">画面タップでUIを隠してスクショ撮影</div>
     </div>
+
+    <div id="tap-area"></div>
 
     <a-scene 
         embedded 
         arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" 
-        renderer="preserveDrawingBuffer: true; logarithmicDepthBuffer: true;"
         vr-mode-ui="enabled: false">
         
         <a-assets>
@@ -101,43 +77,26 @@
     </a-scene>
 
     <script>
-        const snapButton = document.getElementById('snap');
-        const flashLayer = document.getElementById('flash-layer');
+        const uiLayer = document.getElementById('ui-layer');
+        const tapArea = document.getElementById('tap-area');
+        let isHidden = false;
 
-        snapButton.addEventListener('click', () => {
-            // 1. フラッシュ演出
-            flashLayer.style.opacity = '1';
-            setTimeout(() => {
-                flashLayer.style.opacity = '0';
-                flashLayer.style.transition = 'opacity 0.4s';
-            }, 50);
+        // 画面をタップした時の処理
+        tapArea.addEventListener('click', () => {
+            if (!isHidden) {
+                // UIを隠す
+                uiLayer.classList.add('hide');
+                isHidden = true;
 
-            // 2. 撮影処理
-            const scene = document.querySelector('a-scene');
-            const video = document.querySelector('video');
-            const canvas = scene.canvas;
-
-            // 合成用のCanvas作成
-            const newCanvas = document.createElement('canvas');
-            newCanvas.width = video.videoWidth;
-            newCanvas.height = video.videoHeight;
-            const ctx = newCanvas.getContext('2d');
-
-            // カメラ映像を描画
-            ctx.drawImage(video, 0, 0, newCanvas.width, newCanvas.height);
-            // AR（A-Frame）のCanvasをリサイズして重ねる
-            ctx.drawImage(canvas, 0, 0, newCanvas.width, newCanvas.height);
-
-            // 3. ダウンロード処理
-            try {
-                const dataURL = newCanvas.toDataURL('image/png');
-                const link = document.createElement('a');
-                link.download = `AR_Photo_${Date.now()}.png`;
-                link.href = dataURL;
-                link.click();
-            } catch (err) {
-                console.error("保存に失敗しました:", err);
-                alert("画像の保存に失敗しました。ブラウザの制限を確認してください。");
+                // 7秒後に自動でUIを再表示（スクショ撮影の猶予時間）
+                setTimeout(() => {
+                    uiLayer.classList.remove('hide');
+                    isHidden = false;
+                }, 7000);
+            } else {
+                // すでに隠れている時にもう一度タップしたら即座に再表示
+                uiLayer.classList.remove('hide');
+                isHidden = false;
             }
         });
     </script>
