--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
     <div id="ui-layer">
-        <div class="guide-text">画面タップでUIを隠してスクショ撮影</div>
+        <div class="guide-text">撮影はスクリーンショットでお願いします</div>
     </div>
 
     <div id="tap-area"></div>
