--- a/index.html
+++ b/index.html
@@ -3,35 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>AR Screenshot Mode</title>
+    <title>AR Screenshot Perfect Mode</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
     <style>
-        body { margin: 0; overflow: hidden; font-family: sans-serif; background-color: #000; }
+        body { margin: 0; overflow: hidden; font-family: -apple-system, sans-serif; background-color: #000; }
 
-        /* 操作案内のオーバーレイ */
+        /* 操作案内：上部に浮かせるスタイル */
         #ui-layer {
             position: fixed;
-            top: 20px;
+            top: 30px;
             left: 0;
             width: 100%;
             z-index: 1000;
             text-align: center;
             pointer-events: none; /* 下のAR操作を邪魔しない */
-            transition: opacity 0.3s;
+            transition: opacity 0.3s ease; /* 消える時のアニメーション */
         }
 
         .guide-text {
             display: inline-block;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(0, 0, 0, 0.5);
             color: white;
-            padding: 10px 20px;
-            border-radius: 30px;
+            padding: 12px 24px;
+            border-radius: 50px;
             font-size: 14px;
+            backdrop-filter: blur(5px); /* 背景を少しぼかしてiPhone風に */
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
-        /* 画面全体を隠す透明なボタン（タップ判定用） */
+        /* 画面全体のタップ判定用レイヤー */
         #tap-area {
             position: fixed;
             top: 0;
@@ -40,16 +42,19 @@
             height: 100%;
             z-index: 999;
             cursor: pointer;
+            -webkit-tap-highlight-color: transparent; /* タップ時の青い枠を消す */
         }
 
-        /* 撮影モード（UI非表示）時のスタイル */
-        .hide { opacity: 0 !important; }
+        /* 非表示状態のクラス */
+        .hide {
+            opacity: 0 !important;
+        }
     </style>
 </head>
 
 <body>
     <div id="ui-layer">
-        <div class="guide-text">撮影はスクリーンショットでお願いします</div>
+        <div class="guide-text">撮影する場合はスクリーンショットでお願いします</div>
     </div>
 
     <div id="tap-area"></div>
@@ -81,20 +86,14 @@
         const tapArea = document.getElementById('tap-area');
         let isHidden = false;
 
-        // 画面をタップした時の処理
+        // 画面タップで表示/非表示を切り替え
         tapArea.addEventListener('click', () => {
             if (!isHidden) {
                 // UIを隠す
                 uiLayer.classList.add('hide');
                 isHidden = true;
-
-                // 7秒後に自動でUIを再表示（スクショ撮影の猶予時間）
-                setTimeout(() => {
-                    uiLayer.classList.remove('hide');
-                    isHidden = false;
-                }, 7000);
             } else {
-                // すでに隠れている時にもう一度タップしたら即座に再表示
+                // UIを再表示する
                 uiLayer.classList.remove('hide');
                 isHidden = false;
             }
