--- a/index.html
+++ b/index.html
@@ -69,15 +69,14 @@
         </a-assets>
 
         <a-marker type="pattern" url="marker.patt">
-            <a-image 
-                src="#my-image" 
-                rotation="-90 0 0" 
-                position="0 0.1 0" 
-                width="1" 
-                height="1">
-            </a-image>
-        </a-marker>
-
+    <a-image 
+        src="#my-image" 
+        rotation="0 0 0" 
+        position="0 1 0" 
+        scale="10 10 10">
+    </a-image>
+　</a-marker>
+        
         <a-entity camera></a-entity>
     </a-scene>
 
