--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <a-scene 
         embedded 
-        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" 
+        arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;detectionMode: mono_and_matrix; smooth: true; smoothCount: 10; smoothTolerance: 0.01; smoothThreshold: 5;" 
         vr-mode-ui="enabled: false">
         
         <a-assets>
