--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <body>
     <div id="ui-layer">
-        <div class="guide-text">撮影する場合はスクリーンショットでお願いします</div>
+        <div class="guide-text">撮影はスクリーンショットでお願いします</div>
     </div>
 
     <div id="tap-area"></div>
