--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         <a-marker type="pattern" url="marker.patt">
             <a-image 
                 src="#my-image" 
+                width="1"
+                height="1.48"
                 rotation="0 0 0" 
                 position="0 1 0" 
                 scale="3 3 3"
